second commit, toot much changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@ dist/electron/*
 dist/web/*
 build/*
 !build/icons
+coverage
 node_modules/
 npm-debug.log
 npm-debug.log.*
 thumbs.db
 !.gitkeep
-yarn.lock
-yarn-error.log
