--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex-electron": "^1.0.0",
+    "vuex-persist": "^2.1.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
